--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -29,6 +29,7 @@ $grid-breakpoints: (
 ) {
     display: inline-flex;
     align-items: center;
+    justify-content: center;
     padding: $padding-y $padding-x;
     border-radius: $border-r;
     background-color: #ffb700;
