--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -126,4 +126,6 @@ html.dark {
     --D2D1D6-to-292E39: #292e39;
     --linear-7644e1-to-292E39: #292e39;
     --9E9DA8-to-292E39: #292e39;
+    --F6F6F6-to-B9BABE: #b9babe;
+    --9E9DA8-to-B9BABE: #b9babe;
 }
