--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -139,4 +139,6 @@ html {
         ),
         #7644e1;
     --9E9DA8-to-292E39: #9e9da8;
+    --F6F6F6-to-B9BABE: #f6f6f6;
+    --9E9DA8-to-B9BABE: #9e9da8;
 }
