--- a/templates/header.html
+++ b/templates/header.html
@@ -49,7 +49,7 @@
             </div>
 
             <section class="mb-top-action d-none d-flex-md">
-                <a href="#!" class="mb-top-action__item">
+                <a href="./checkout.html" class="mb-top-action__item">
                     <img
                         src="./assets/icon/cart.svg"
                         alt=" "
