--- a/templates/header.html
+++ b/templates/header.html
@@ -58,7 +58,7 @@
                     <p class="mb-top-action__title">Card</p>
                     <div class="mb-top-action__qtn">3</div>
                 </a>
-                <a href="#!" class="mb-top-action__item">
+                <a href="../fav-page.html" class="mb-top-action__item">
                     <img
                         src="./assets/icon/heart.svg"
                         alt=" "
@@ -2022,14 +2022,14 @@
             </div>
 
             <div class="top-action__group">
-                <button class="top-action__btn">
+                <a href="./fav-page.html" class="top-action__btn">
                     <img
                         src="./assets/icon/heart.svg"
                         alt=" "
                         class="icon-color top-action__icon"
                     />
                     <span class="top-action__title">03</span>
-                </button>
+                </a>
                 <div class="top-action__separator"></div>
                 <div class="top-action__preview-hover">
                     <button class="top-action__btn">
