--- a/scss/components/_checkout.scss
+++ b/scss/components/_checkout.scss
@@ -78,6 +78,8 @@
                     flex-wrap: wrap;
                     align-items: start;
                 }
+                gap: 15px ;
+                flex-shrink: 0
             }
         }
         &-line {
