--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -128,4 +128,13 @@ html.dark {
     --9E9DA8-to-292E39: #292e39;
     --F6F6F6-to-B9BABE: #b9babe;
     --9E9DA8-to-B9BABE: #b9babe;
+
+    --FAFAFD-to-171C28: #171c28;
+    --B9BABE: #9e9da8;
+    --filter-B9BABE: brightness(0) saturate(100%) invert(74%) sepia(1%)
+        saturate(1949%) hue-rotate(206deg) brightness(91%) contrast(67%);
+    --EDEDF6-to-292E39: #292e39;
+    --FAFAFDto-171C28: #171C28;
+    --white-to-292E39 : #292E39 ;
+    --1A162E-to-D2D1D6: #D2D1D6;
 }
