--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -141,4 +141,14 @@ html {
     --9E9DA8-to-292E39: #9e9da8;
     --F6F6F6-to-B9BABE: #f6f6f6;
     --9E9DA8-to-B9BABE: #9e9da8;
+
+    --FAFAFD-to-171C28: #fafafd;
+    --B9BABE: #b9babe;
+    --9E9DA8: #9e9da8;
+    --filter-B9BABE: brightness(0) saturate(100%) invert(74%) sepia(1%)
+        saturate(1949%) hue-rotate(206deg) brightness(91%) contrast(67%);
+    --EDEDF6-to-292E39: #ededf6;
+    --FAFAFD-to-171C28: #fafafd;
+    --white-to-292E39: white;
+    --1A162E-to-D2D1D6: #1A162E;
 }
