--- a/scss/components/_cm-checkbox.scss
+++ b/scss/components/_cm-checkbox.scss
@@ -38,8 +38,6 @@
 
 
 // <label class="cm-checkbox">
-//                                             <input type="checkbox" hidden />
-//                                             <span
-//                                                 class="cm-checkbox__box"
-//                                             ></span>
-//                                         </label>
+//     <input type="checkbox" hidden />
+//     <span class="cm-checkbox__box"></span>
+// </label>
