--- a/templates/header.html
+++ b/templates/header.html
@@ -18,7 +18,6 @@
             <h1 class="logo__title">grocery mart</h1>
         </a>
         <!--  -->
-
         <nav class="navbar" id="navbar">
             <div
                 class="navbar__back icon-color js-toggle"
@@ -2149,6 +2148,14 @@
                     class="top-action__user"
                 />
             </a>
+
+            
         </section>
+        <div class="f-spb top-sign">
+
+                <a href="./sign-up.html" class="top-sign-up">Sign up</a>
+
+                <a href="./sign-in.html" class="top-sign-in">Sign in</a>
+            </div>
     </div>
 </div>
