--- a/scss/base/_flex-line.scss
+++ b/scss/base/_flex-line.scss
@@ -5,7 +5,7 @@ $display-breakpoints-for-flex-line: (
     md: 768px,
     sm: 576px,
 );
-
+//  
 .f-wrap-none {
     display: flex;
     gap: 10px;
