--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2293,12 +2293,14 @@ html.dark {
 }
 @media (max-width: 991.8px) {
   .product__filter-board {
-    inset: 99% 0 auto 30%;
+    position: fixed;
+    inset: 0 30px auto 10%;
   }
 }
 @media (max-width: 767.8px) {
   .product__filter-board {
-    inset: 99% 0 auto 20%;
+    position: fixed;
+    inset: 0 15px auto 10%;
   }
 }
 .product__filter:hover .product__filter-board {
@@ -2385,12 +2387,13 @@ html.dark {
 }
 
 .filter {
-  padding: 30px;
+  padding: 30px 0;
   border-radius: 20px;
   background-color: var(--filter-bg);
   box-shadow: 0 20px 10px 20px rgba(0, 0, 0, 0.1);
 }
 .filter__header {
+  padding: 0 30px;
   margin-bottom: 30px;
   color: var(--text-color, #1a162e);
   font-size: 2.2rem;
@@ -2399,6 +2402,10 @@ html.dark {
 }
 .filter__body {
   display: flex;
+  padding: 0 30px;
+  max-height: 60vh;
+  overflow: auto;
+  overscroll-behavior: contain;
 }
 @media (max-width: 991.8px) {
   .filter__body {
@@ -2507,6 +2514,14 @@ html.dark {
   border: 1px solid var(--filter__price-line);
   color: var(--text-color);
 }
+.filter__search img {
+  width: 21px;
+  height: 21px;
+}
+.filter__search input {
+  flex-grow: 1;
+  flex-shrink: 1;
+}
 .filter__optionList {
   display: flex;
   gap: 20px;
@@ -2532,6 +2547,7 @@ html.dark {
   display: none;
 }
 .filter__btn {
+  padding: 0 30px;
   margin-top: 18px;
   display: flex;
   align-items: center;
