--- a/scss/components/_filter.scss
+++ b/scss/components/_filter.scss
@@ -8,13 +8,14 @@
 }
 
 .filter {
-    padding: 30px;
+    padding: 30px 0;
     border-radius: 20px;
     background-color: var(--filter-bg);
     box-shadow: 0 20px 10px 20px rgba(0, 0, 0, 0.1);
 
     //
     &__header {
+        padding: 0 30px;
         margin-bottom: 30px;
         color: var(--text-color, #1a162e);
         font-size: 2.2rem;
@@ -24,6 +25,10 @@
 
     &__body {
         display: flex;
+        padding: 0 30px;
+        max-height: 60vh;
+        overflow: auto;
+        overscroll-behavior: contain;
         @include ab.screen(lg) {
             flex-direction: column;
         }
@@ -150,6 +155,16 @@
         border: 1px solid var(--filter__price-line);
         //
         color: var(--text-color);
+
+
+        img {
+            width: 21px ;
+            height: 21px;
+        }
+        input {
+            flex-grow: 1;
+            flex-shrink: 1;
+        }
     }
 
     &__optionList {
@@ -181,6 +196,7 @@
     }
 
     &__btn {
+        padding: 0 30px;
         margin-top: 18px;
         @include ab.screen(lg) {
             margin-top: 38px;
