--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,65 @@
 <div class="footer__inner">
-    <h2 class="">Footer</h2>
+    <div class="container">
+        <div class="footer__social">
+            <a href="#!" class="footer__social-item fb">
+                <img src="./assets/icon/social/fb.svg" alt=" " />
+            </a>
+            <a href="#!" class="footer__social-item ig">
+                <img src="./assets/icon/social/insta.svg" alt=" " />
+            </a>
+            <a href="#!" class="footer__social-item twitter">
+                <img src="./assets/icon/social/twitter.svg" alt=" " />
+            </a>
+            <a href="#!" class="footer__social-item whatapp">
+                <img src="./assets/icon/social/whatapp.svg" alt=" " />
+            </a>
+        </div>
+        <div class="footer__row">
+            <div class="footer__column">
+                <a href="./index.html" class="logo">
+                    <img
+                        src="./assets/icon/main-logo.svg"
+                        alt=" "
+                        class="logo__icon"
+                    />
+                    <h1 class="logo__title">grocery mart</h1>
+                </a>
+                <form action="#!" class="email-submit footer__email">
+                    <input type="text" placeholder="Enter email" />
+                    <button class="email-submit__btn">Subscribe</button>
+                </form>
+                <div class="footer__desc">
+                    Relax and take notes - While I take tokes of the Marijuana
+                    smoke , Throw you in a choke gun smoke guns smoke Biggie
+                    smalls for mayor the rap slayer
+                </div>
+            </div>
+            <div class="footer__column">
+                <h3 class="footer__list-title">Main</h3>
+                <div class="footer__list">
+                    <a class="footer__item" href="#!">Home</a>
+                    <a class="footer__item" href="#!">Production</a>
+                    <a class="footer__item" href="#!">Category</a>
+                    <a class="footer__item" href="#!">Blog</a>
+                </div>
+            </div>
+            <div class="footer__column">
+                <h3 class="footer__list-title">About</h3>
+                <div class="footer__list">
+                    <a class="footer__item" href="#!">Privacy</a>
+                    <a class="footer__item" href="#!">Terms</a>
+                    <a class="footer__item" href="#!">Security</a>
+                    <a class="footer__item" href="#!">Cookies</a>
+                </div>
+            </div>
+            <div class="footer__column">
+                <div class="footer__copywrite">
+                    Privacy Policy | Terms of Conditions
+                </div>
+                <div class="footer__copywrite" style="margin-top: 20px">
+                    ©interactiveArif 2021. All rights reserved.
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
