--- a/templates/header.html
+++ b/templates/header.html
@@ -2141,21 +2141,40 @@
                 </div>
             </div>
 
-            <a href="./user.html" class="top-action__user--wrap">
-                <img
-                    src="./assets/img/avatar.jpg"
-                    alt="user"
-                    class="top-action__user"
-                />
-            </a>
+            <!-- href="./user.html" -->
+            <div class="top-action__user">
+                <img src="./assets/img/avatar.jpg" alt="user" class="" />
 
-            
+                <div class="top-action__user-wrap">
+                    <div class="top-action__user-list">
+                        <a
+                            href="./user.html"
+                            class="top-action__user-item f-spb"
+                        >
+                            <span>Profile</span>
+                        </a>
+                        <div class="top-action__user-item f-spb theme-switch">
+                            <span>Screen mode </span>
+                            <img
+                                src="./assets/icon/light.svg"
+                                alt=""
+                                class="icon-color"
+                            />
+                        </div>
+                        <a
+                            href="./sign-in.html"
+                            class="top-action__user-item f-spb"
+                        >
+                            <span>Log out</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </section>
         <div class="f-spb top-sign">
+            <a href="./sign-up.html" class="top-sign-up">Sign up</a>
 
-                <a href="./sign-up.html" class="top-sign-up">Sign up</a>
-
-                <a href="./sign-in.html" class="top-sign-in">Sign in</a>
-            </div>
+            <a href="./sign-in.html" class="top-sign-in">Sign in</a>
+        </div>
     </div>
 </div>
