--- a/scss/components/_filter.scss
+++ b/scss/components/_filter.scss
@@ -24,18 +24,21 @@
     }
 
     &__body {
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr auto 1fr auto 1fr;
+        gap:  30px 20px;
         padding: 0 30px;
-        max-height: 60vh;
+        max-height: 40vh;
         overflow: auto;
         overscroll-behavior: contain;
         @include ab.screen(lg) {
-            flex-direction: column;
+            grid-template-columns: 1fr;
+
+            max-height: 60vh;
         }
     }
 
     &__section {
-        flex: 1;
         display: flex;
         flex-direction: column;
         row-gap: 20px;
@@ -52,14 +55,14 @@
         align-self: stretch;
         width: 1px;
         background-color: var(--filter__price-line);
-        margin: 0 14px;
+        
 
         &--rotate {
-            margin: 0 30px;
+            
             @include ab.screen(lg) {
                 width: 100%;
                 height: 1px;
-                margin: 30px 0px 25px;
+                opacity: 0.5;
             }
         }
     }
@@ -156,9 +159,8 @@
         //
         color: var(--text-color);
 
-
         img {
-            width: 21px ;
+            width: 21px;
             height: 21px;
         }
         input {
