--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -2,6 +2,7 @@ html.dark {
     --main-body-bg: #292e39;
     //
     --text-color: rgb(255, 255, 255);
+    --text-color-blurry: rgba(255, 255, 255, 0.1);
     --icon-color: brightness(0) saturate(100%) invert(100%) sepia(0%)
         saturate(7500%) hue-rotate(175deg) brightness(100%) contrast(113%);
     --header-bg-color: #171c28;
@@ -137,4 +138,9 @@ html.dark {
     --FAFAFDto-171C28: #171C28;
     --white-to-292E39 : #292E39 ;
     --1A162E-to-D2D1D6: #D2D1D6;
+    --ededf6-to-9e9da8: #9e9da8;
+
+
+
+
 }
