--- a/scss/components/_production.scss
+++ b/scss/components/_production.scss
@@ -163,4 +163,15 @@
             color: var(--production-tabs-active-text);
         }
     }
+
+    // &__tab-contents {
+
+    // }
+    &__tab-content {
+        display: none;
+        //
+        &.active {
+            display: block;
+        }
+    }
 }
