--- a/scss/components/_shipping.scss
+++ b/scss/components/_shipping.scss
@@ -91,6 +91,7 @@
     }
 
     &__edit {
+        color: var(--text-color);
         align-self: flex-end;
         font-size: 1.8rem;
         display: flex;
