--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -153,4 +153,6 @@ html {
     --white-to-292E39: white;
     --1A162E-to-D2D1D6: #1a162e;
     --ededf6-to-9e9da8: #ededf6;
+
+    --FAFAFD-to-292E39: #fafafd;
 }
