--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1461,6 +1461,7 @@ html {
   --white-to-292E39: white;
   --1A162E-to-D2D1D6: #1a162e;
   --ededf6-to-9e9da8: #ededf6;
+  --FAFAFD-to-292E39: #fafafd;
 }
 
 html.dark {
@@ -1566,6 +1567,7 @@ html.dark {
   --white-to-292E39: #292E39 ;
   --1A162E-to-D2D1D6: #D2D1D6;
   --ededf6-to-9e9da8: #9e9da8;
+  --FAFAFD-to-292E39:#292E39 ;
 }
 
 .top-action__btn, .top-action__group, .top-action, .navbar__link > a, .navbar__list, .header__inner {
@@ -1873,8 +1875,7 @@ html.dark {
 }
 
 .footer {
-  margin-top: 30px;
-  padding: 30px 0;
+  margin-top: 50px;
 }
 .footer__inner {
   padding-top: 30px;
@@ -1933,6 +1934,7 @@ html.dark {
 }
 .footer__col {
   flex-shrink: 0;
+  padding: 0 10px;
 }
 .footer__list-title {
   color: var(--text-color);
@@ -1954,7 +1956,7 @@ html.dark {
 }
 .footer__desc {
   margin-top: 20px;
-  max-width: 500px;
+  max-width: 560px;
   line-height: 1.8;
 }
 .footer__email {
@@ -3002,6 +3004,12 @@ html.dark {
 .production__tab.active {
   color: var(--production-tabs-active-text);
 }
+.production__tab-content {
+  display: none;
+}
+.production__tab-content.active {
+  display: block;
+}
 
 .page-path {
   display: flex;
@@ -3769,6 +3777,7 @@ input:checked ~ .cm-checkbox__box::after {
   gap: 10px;
 }
 .shipping__edit {
+  color: var(--text-color);
   align-self: flex-end;
   font-size: 1.8rem;
   display: flex;
@@ -3851,7 +3860,7 @@ input:checked ~ .cm-checkbox__box::after {
 .payment__shipping-item {
   padding: 20px;
   border-radius: 20px;
-  background: var(--F6F6F6-to-B9BABE);
+  background: var(--FAFAFD-to-292E39);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -3876,7 +3885,7 @@ input:checked ~ .cm-checkbox__box::after {
   line-height: 1.44;
 }
 .payment__shipping-link {
-  color: var(--1A162E-to-B9BABE);
+  color: var(--cart-preview-link);
   font-size: 1.5rem;
 }
 .payment__shipping-brand {
@@ -3969,6 +3978,11 @@ input:checked ~ .cm-checkbox__box::after {
   width: 100vw;
   transition: transform 0.3s ease;
 }
+@supports (-webkit-touch-callout: none) {
+  .sign {
+    min-height: -webkit-fill-available;
+  }
+}
 @media (max-width: 767.8px) {
   .sign.active {
     transform: translateX(-100%);
@@ -4057,6 +4071,9 @@ input:checked ~ .cm-checkbox__box::after {
   justify-content: space-between;
   gap: 10px;
   text-align: left;
+}
+.sign__input-line:focus-within {
+  border-color: var(--drop-menu-hover-text);
 }
 .sign__input-line input {
   width: 80%;
