--- a/scss/components/_payment-method.scss
+++ b/scss/components/_payment-method.scss
@@ -59,7 +59,7 @@
         &-item {
             padding: 20px;
             border-radius: 20px;
-            background: var(--F6F6F6-to-B9BABE);
+            background: var(--FAFAFD-to-292E39);
 
             display: flex;
             justify-content: space-between;
@@ -89,7 +89,7 @@
         }
 
         &-link {
-            color: var(--1A162E-to-B9BABE);
+            color: var(--cart-preview-link);
             font-size: 1.5rem;
         }
 
