--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,8 +1,7 @@
 @use "../abstracts" as ab;
 
 .footer {
-    margin-top: 30px;
-    padding: 30px 0;
+    margin-top: 50px;
 
     &__inner {
         padding-top: 30px;
@@ -83,6 +82,7 @@
 
     &__col {
         flex-shrink: 0;
+        padding: 0 10px;
     }
 
     &__list-title {
@@ -110,7 +110,7 @@
 
     &__desc {
         margin-top: 20px;
-        max-width: 500px;
+        max-width: 560px;
         line-height: 1.8;
     }
 
